[gd_scene load_steps=3 format=3 uid="uid://dt76dc3pfhjkw"]

[ext_resource type="Script" path="res://menu.gd" id="1_y614u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0iibu"]
bg_color = Color(0.180933, 0.180933, 0.180933, 1)

[node name="EasyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y614u")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="Scroll" type="ScrollContainer" parent="Margin"]
layout_mode = 2

[node name="Entries" type="VBoxContainer" parent="Margin/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 3

[node name="BusyPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0iibu")

[node name="Label" type="Label" parent="BusyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Running command ..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NoFile" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0iibu")

[node name="Label" type="Label" parent="NoFile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No \"easy_menu.conf\" file got found."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
